--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "case-3-deneme-2",
+  "name": "firebase-auth-pazarama-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
